--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "vue": "^2.5.2",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
