--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js && cp redirects.txt build/_redirects"
+    "build": "node build/build.js && cp redirects build/_redirects"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
